[FIX] web: text overlap in kanban view
Before this commit, if a text was too big (url, email or others), the
text of the kanban record overlap with the other records.

Now, the overflow text is truncated.

opw-2079183

closes odoo/odoo#37855

--- a/addons/web/static/src/scss/kanban_view.scss
+++ b/addons/web/static/src/scss/kanban_view.scss
@@ -324,6 +324,8 @@
 
         .oe_kanban_details {
             width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
             ul {
                 margin-bottom: $o-kanban-inner-hmargin*0.5;;
                 padding-left: 0;
